# dante-analyze

./: ARCHITECTURE.md  KG-PROBLEM.md  KG-en.md  KG-ja.md  Makefile  OVERVIEW.md  PLAN.md  README.md  REARCHITECTURE.md  pyproject.toml
01-scenes/: Makefile  README.md  inferno.md  paradiso.md  purgatorio.md  scenes.py
02-markup/: Makefile  README.md  markup.py
03-reading/: Makefile  README.md  reading.py
04-bullets/: Makefile  bullets.py
04-tags/: Makefile  PLAN.md  README.md  coref.cache.txt  coref.txt  coreference.py  node_types.py  tags.py  types.txt
05-registry/: Makefile  PLAN.md  README.md  aliases.txt  coref.cache.txt  coreference.py  inferno.txt  measure.py  paradiso.txt  purgatorio.txt  registry.py  types.txt
05-tags/: Makefile  tags.py  verify_tags.py
06-speech/: Makefile  README.md  speech.py
07-relations/: Makefile  PLAN.md  README.md  measure.py  relations.py
08-kg/: Makefile  README.md  assembly.py  paradiso-edges.jsonl  purgatorio-nodes.jsonl
09-location/: Makefile  README.md  location.py
10-topography/: Makefile  README.md  inferno.clusters.txt  inferno.txt  paradiso.clusters.txt  paradiso.txt  purgatorio.clusters.txt  purgatorio.txt  topography.py
11-presence/: Makefile  README.md  presence.py
12-addressee/: Makefile  README.md  addressee.py
13-cohort/: Makefile  README.md  cohort.py  inferno.txt  measure.py  paradiso.txt  purgatorio.txt  rollup.py
14-lock/: Makefile  README.md  lock.py
15-digest/: Makefile  README.md  conformance.py  digest.py
dante_analyze/: README.md  __init__.py  _paths.py  checkpoint.py  cli.py  llm.py  (+6 more)
(+1211 files in other folders)
